<package format="2">
  <name>arduino</name>
  <version>1.0.0</version>
  <description>
  Ros nodes for the first test scenario.
  </description>
  <maintainer email="frielingphilip@yahoo.de">Philip Frieling</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>dobot_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>arduino_msgs</depend>
</package>
