<?xml version="1.0"?>
<package format="2">
  <name>arduino_msgs</name>
  <version>0.0.0</version>
  <description>The arduino_msgs package</description>

  <maintainer email="liuzhufu@dobot.cc">Luke</maintainer>

  <license>BSD</license>

  <author email="liuzhufu@dobot.cc">Liu Zhufu</author>

  <buildtool_depend>catkin</buildtool_depend>
  
   <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
	<cpp cflags="-I${prefix}/srv/cpp"/>
  </export>
</package>
