<package format="2">
  <name>detection</name>
  <version>1.0.0</version>
  <description>
  Ros nodes for the first test scenario.
  </description>
  <maintainer email="frielingphilip@yahoo.de">Philip Frieling</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dobot_msgs</depend>
  <depend>detection_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf_helper</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf_conversions</depend>
  <depend>dobot</depend>
  <depend>marker_helper</depend>
</package>
