<?xml version="1.0"?>
<package format="2">
  <name>dobot</name>
  <version>0.0.0</version>
  <description>The dobot package</description>

  <maintainer email="liuzhufu@dobot.cc">Luke</maintainer>

  <license>BSD</license>

  <author email="liuzhufu@dobot.cc">Liu Zhufu</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dobot_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>detection_msgs</build_depend>
  <build_depend>tf_helper</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dobot_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>detection_msgs</exec_depend>
  <exec_depend>tf_helper</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>

  </export>
</package>
