<package format="2">
  <name>dobot_description</name>
  <version>1.0.0</version>
  <description>
  Dobot gazebo model.
  </description>
  <maintainer email="frielingphilip@yahoo.de">Philip Frieling</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>dobot_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>marker_helper</depend>
  <depend>actionlib</depend>
  <depend>gazebo_msgs</depend>
</package>
