<package format="2">
  <name>marker_helper</name>
  <version>1.0.0</version>
  <description>
    markerHelper library
  </description>
  <maintainer email="frielingphilip@yahoo.de">Philip Frieling</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
</package>
